--- a/src/index.scss
+++ b/src/index.scss
@@ -30,12 +30,32 @@ body {
     padding: 1em;
 }
 
-.main-content-front {
+.flip-card {
     position: relative;
+    width: 100%;
+    height: 100%;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: 2s;
+
+    .card-front,
+    .card-back {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        backface-visibility: hidden;
+    }
+}
+
+.flip-card.show-back {
+    transform: rotateY(180deg);
+}
+
+.landing-content {
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
-    width: 100%;
     background-color: #2e4f80;
 
     & > * {
@@ -48,7 +68,7 @@ body {
         width: 100%;
         height: 80%;
         top: 20%;
-        clip-path:polygon(0 30%, 100% 0%, 100% 100%, 0% 100%);       
+        clip-path: polygon(0 30%, 100% 0%, 100% 100%, 0% 100%);
     }
 
     .title {
@@ -134,6 +154,7 @@ body {
     }
 
     .enter-button {
+        cursor: pointer;
         border: none;
         font-size: 50px;
         letter-spacing: 5px;
@@ -141,4 +162,9 @@ body {
         background-color: var(--dark-color);
         border-top: solid 4px var(--secondary-color);
     }
+}
+
+.form-content {
+    background-color: red;
+    transform: rotateY(180deg);
 }
