--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 :root {
     --accent-color:  #ffc86f;
+    --accent-border-color:  #af894c;
     --secondary-color: #e66871;
     --dark-color: #861537;
     --bg-dark: #182d4d;
