--- a/src/flip-card.scss
+++ b/src/flip-card.scss
@@ -5,9 +5,10 @@
     perspective: 1000px;
     transform-style: preserve-3d;
     transition: 2s;
-
+    
     .card-front,
     .card-back {
+        border-radius: 3px;
         position: absolute;
         top: 0;
         left: 0;
