added users data logic

--- a/src/landing.scss
+++ b/src/landing.scss
@@ -98,7 +98,7 @@
         }
     }
 
-    .enter-button {
+    .show-form-btn {
         cursor: pointer;
         border: none;
         font-size: 50px;
