--- a/src/landing.scss
+++ b/src/landing.scss
@@ -18,9 +18,24 @@
 
     .title {
         padding: .5em;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: baseline;
 
         & > img {
-            width: 100%;
+            height: 150px;
+            padding: 10px 0px 0px 10px;
+        }
+
+        #logo-text p {
+            direction: ltr;
+            padding: 0;
+            margin: 0;
+            vertical-align: bottom;
+            font-size: min(15vw, 5.3em);
+            height: 100%;
+            color: #ffc870;
+            font-family: 'Roboto', sans-serif;
         }
     }
 
