--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alef&family=Open+Sans:wght@800&family=Roboto:wght@100&display=swap');
 
 :root {
     --accent-color:  #ffc86f;
@@ -18,7 +18,7 @@ html, body {
     font-size: 17px;
     height: 100vh;
     width: 100%;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Alef', sans-serif;
     direction: rtl;
 }
 
