--- a/src/form.scss
+++ b/src/form.scss
@@ -5,12 +5,13 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        height: 100%;
     }
     
     .form-title {
         margin: 0 0 1em 0;
         text-align: center;
-        font-size: 40px;
+        font-size: min(8vw, 40px);
         color: var(--accent-color);
         background-color: var(--dark-color);
         border-bottom: solid 4px var(--secondary-color);
@@ -21,6 +22,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        flex-grow: 1;
     }
 
     .input-wrapper {
@@ -31,8 +33,10 @@
         margin-bottom: 1.5em;
         
         .form-input {
-            padding: 4px;
             width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border-radius: 3px;
             border: none;
             -webkit-appearance: none;
             -moz-appearance: none;       
@@ -40,23 +44,24 @@
     }
     
     .enter-buttons {
-        width: 80%;
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        grid-column-gap: 1em;
+        grid-column-gap: 0em;
 
         .enter-btn {
             padding: .5em 1em;
             font-size: 25px;
-            border: 2px solid var(--secondary-color);
+            border: none;
+            border-top: 2px solid var(--secondary-color);
             background-color: var(--dark-color);
+            font-family: 'Alef', sans-serif;
             color: #e1e1e1;
-            border-radius: 3px;
             cursor: pointer;
             
             &.action {
                 background-color: var(--accent-color);
-                border: 2px solid var(--accent-border-color);
+                border-top: 2px solid var(--accent-border-color);
                 color: #1e1e1e;
             }
 
@@ -72,8 +77,10 @@
     }
 
     .signature-pad {
+        margin-top: 5px;
         background-color: white;
         user-select: none;
+        border-radius: 3px;
     }
 }
 
