--- a/src/index.scss
+++ b/src/index.scss
@@ -12,17 +12,24 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 html, body {
     margin: 0;
     padding: 0;
     font-size: 17px;
-    height: 100vh;
     width: 100%;
     font-family: 'Alef', sans-serif;
     direction: rtl;
 }
 
 body {
+    height: 100vh;
+    height: -moz-availabe;
+    height: -webkit-fill-available;
+    height: stretch;
     background-color: #fafafa;
 }
 
