Add media queries in order to support low height layouts

--- a/src/flip-card.scss
+++ b/src/flip-card.scss
@@ -33,3 +33,30 @@
         pointer-events: all;
     }
 }
+
+
+@media only screen and (max-height: 700px) {
+    .flip-card {
+        .card-back,
+        .card-back {
+            position: relative;
+        }
+
+        .card-back {
+            visibility: hidden;
+            transform: none;
+        }
+    }
+
+    .flip-card.show-back {
+        transform: none;
+
+        .card-front {
+            display: none;
+        }
+
+        .card-back {
+            visibility: visible;
+        }
+    }
+}
