--- a/src/landing.scss
+++ b/src/landing.scss
@@ -21,6 +21,7 @@
         display: flex;
         flex-direction: row-reverse;
         align-items: baseline;
+        margin: 0px auto 0px auto;
 
         & > img {
             height: 150px;
@@ -32,7 +33,8 @@
             padding: 0;
             margin: 0;
             vertical-align: bottom;
-            font-size: min(15vw, 5.3em);
+            font-size: 5.3em;
+            font-size: min(15vw, 6em);
             height: 100%;
             color: #ffc870;
             font-family: 'Roboto', sans-serif;
@@ -48,10 +50,10 @@
     .count-wrapper {
         margin: 1em;
         position: relative;
-        height: 50%;
         background-image: url("./count-bg.jpg");
         background-size: cover;
         flex-grow: 1;
+        min-height: 300px;
         outline: dotted 2px var(--accent-color);
 
         .count-content {
