--- a/src/landing.scss
+++ b/src/landing.scss
@@ -89,6 +89,7 @@
                     line-height: 1em;
                     position: relative;
                     white-space: nowrap;
+                    min-height: 4em;
 
                     &::after, &::before {
                         content: "";
@@ -101,31 +102,55 @@
                     &::before {
                         left: 100%;
                         border-left: 0px solid transparent;
-                        border-right: 2em solid transparent;
-                        border-bottom: 2em solid var(--dark-color);
+                        border-right: 4em solid transparent;
+                        border-bottom: 4em solid var(--dark-color);
                     }
 
                     &::after {
                         right: 100%;
-                        border-left: 2em solid transparent;
+                        border-left: 4em solid transparent;
                         border-right: 0px solid transparent;
-                        border-top: 2em solid var(--dark-color);
+                        border-top: 4em solid var(--dark-color);
+                    }
+
+                    p {
+                        margin: 5px;
                     }
                 }
             }
         }
     }
 
-    .show-form-btn {
-        cursor: pointer;
-        border: none;
-        font-size: 50px;
-        letter-spacing: 1.5px;
-        color: var(--accent-color);
-        background-color: var(--dark-color);
-        border-top: solid 4px var(--secondary-color);
-        font-family: 'Alef', sans-serif;
+    .info {
+        padding: 0 15px 0 15px;
+        color: white;
+        
+        h2 {
+            margin: 0;
+        }
 
+        p {
+            margin: 5px 0 15px 0;
+        }
+    }
+
+    .location {
+        position: relative;
+
+        .location-text {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            height: 175px;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 0 10px 0 10px;
+            max-width: 45%;
+            font-size: 1.3em;
+            font-size: min(4vw, 1.3em);
+        }
+    }
+
+    .show-form-btn {
         &:active, &:focus {
             filter: brightness(1.15);
             outline: none;
