--- a/src/flip-card.scss
+++ b/src/flip-card.scss
@@ -37,13 +37,13 @@
 
 @media only screen and (max-height: 700px) {
     .flip-card {
-        .card-back,
+        .card-front,
         .card-back {
             position: relative;
         }
 
         .card-back {
-            visibility: hidden;
+            display: none;
             transform: none;
         }
     }
@@ -56,7 +56,7 @@
         }
 
         .card-back {
-            visibility: visible;
+            display: block;
         }
     }
 }
