--- a/src/landing.scss
+++ b/src/landing.scss
@@ -53,7 +53,7 @@
         background-image: url("./count-bg.jpg");
         background-size: cover;
         flex-grow: 1;
-        min-height: 300px;
+        min-height: clamp(100px, 60vw, 500px);
         outline: dotted 2px var(--accent-color);
 
         .count-content {
@@ -69,7 +69,7 @@
                 text-align: center;
                 .count-value {
                     display: block;
-                    font-size: clamp(50px, 50vw, 200px);
+                    font-size: clamp(50px, 40vw, 400px);
                     font-family: 'Open Sans', sans-serif;
                     line-height: 1em;
 
@@ -141,12 +141,17 @@
             position: absolute;
             right: 15px;
             top: 15px;
-            height: 175px;
+            max-height: 175px;
             background-color: rgba(255, 255, 255, 0.8);
             padding: 0 10px 0 10px;
-            max-width: 45%;
+            max-width: 50%;
             font-size: 1.3em;
             font-size: min(4vw, 1.3em);
+        }
+
+        .bold {
+            font-weight: bold;
+            white-space: nowrap;
         }
     }
 
